d2l RL, hf rename

--- a/Dive_into_deep_learning/17_Reinforcement_Learning/2_value_iteration.ipynb
+++ b/Dive_into_deep_learning/17_Reinforcement_Learning/2_value_iteration.ipynb
@@ -368,17 +368,7 @@
    "id": "be3c2b5b-3d55-4a74-98da-16aa414ae0c5",
    "metadata": {},
    "source": [
-    "In the FrozenLake environment, the robot moves on a $4 \\times 4$ grid (these are the states) with actions that are \"up\" ($\\uparrow$), \"down\" ($\\rightarrow$), \"left\" ($\\leftarrow$), and \"right\" ($\\rightarrow$). The environment contains a number of holes (H) cells and frozen (F) cells as well as a goal cell (G), all of which are unknown to the robot. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9dad0f82-d5be-49db-b515-0abdf043ee85",
-   "metadata": {},
-   "source": [
-    "To keep the problem simple, we assume the robot has reliable actions, i.e. $P(s' \\mid s, a) = 1$ for all $s \\in \\mathcal{S}, a \\in \\mathcal{A}$. If the robot reaches the goal, the trial ends and the robot receives a reward of $1$ irrespective of the action; the reward at any other state is $0$ for all actions. The objective of the robot is to learn a policy that reaches the goal location (G) from a given start location (S) (this is $s_0$) to maximize the *return*.\n",
-    "\n",
-    "The following function implements Value Iteration, where `env_info` contains MDP and environment related information and `gamma` is the discount factor:"
+    "In the FrozenLake environment, the robot moves on a $4 \\times 4$ grid (these are the states) with actions that are \"up\" ($\\uparrow$), \"down\" ($\\rightarrow$), \"left\" ($\\leftarrow$), and \"right\" ($\\rightarrow$). The environment contains a number of holes (H) cells and frozen (F) cells as well as a goal cell (G), all of which are unknown to the robot. To keep the problem simple, we assume the robot has reliable actions, i.e. $P(s' \\mid s, a) = 1$ for all $s \\in \\mathcal{S}, a \\in \\mathcal{A}$. If the robot reaches the goal, the trial ends and the robot receives a reward of $1$ irrespective of the action; the reward at any other state is $0$ for all actions. The objective of the robot is to learn a policy that reaches the goal location (G) from a given start location (S) (this is $s_0$) to maximize the *return*.\n"
    ]
   },
   {
@@ -434,9 +424,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dad0f82-d5be-49db-b515-0abdf043ee85",
+   "metadata": {},
+   "source": [
+    "The following function implements Value Iteration, where `env_info` contains MDP and environment related information and `gamma` is the discount factor:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aa68bcd-d393-4493-b31c-8c46d6699fe0",
+   "id": "2861a4ff-fba6-4ffb-b24c-301747bb24d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def value_iteration(env_info, gamma, num_iters):\n",
+    "    env_desc = env_info['desc']  # 2D array shows what each item means\n",
+    "    prob_idx = env_info['trans_prob_idx']\n",
+    "    nextstate_idx = env_info['nextstate_idx']\n",
+    "    reward_idx = env_info['reward_idx']\n",
+    "    num_states = env_info['num_states']\n",
+    "    num_actions = env_info['num_actions']\n",
+    "    mdp = env_info['mdp']\n",
+    "\n",
+    "    V  = np.zeros((num_iters + 1, num_states))\n",
+    "    Q  = np.zeros((num_iters + 1, num_states, num_actions))\n",
+    "    pi = np.zeros((num_iters + 1, num_states))\n",
+    "\n",
+    "    for k in range(1, num_iters + 1):\n",
+    "        for s in range(num_states):\n",
+    "            for a in range(num_actions):\n",
+    "                # Calculate \\sum_{s'} p(s'\\mid s,a) [r + \\gamma v_k(s')]\n",
+    "                for pxrds in mdp[(s,a)]:\n",
+    "                    # mdp(s,a): [(p1,next1,r1,d1),(p2,next2,r2,d2),..]\n",
+    "                    pr = pxrds[prob_idx]  # p(s'\\mid s,a)\n",
+    "                    nextstate = pxrds[nextstate_idx]  # Next state\n",
+    "                    reward = pxrds[reward_idx]  # Reward\n",
+    "                    Q[k,s,a] += pr * (reward + gamma * V[k - 1, nextstate])\n",
+    "            # Record max value and max action\n",
+    "            V[k,s] = np.max(Q[k,s,:])\n",
+    "            pi[k,s] = np.argmax(Q[k,s,:])\n",
+    "    show_value_function_progress(env_desc, V[:-1], pi[:-1])\n",
+    "\n",
+    "    return V, Q, pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8e8ca6-e649-4fe1-877a-89814e35b56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,44 +536,6 @@
     "\n",
     "    fig.tight_layout()\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2861a4ff-fba6-4ffb-b24c-301747bb24d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def value_iteration(env_info, gamma, num_iters):\n",
-    "    env_desc = env_info['desc']  # 2D array shows what each item means\n",
-    "    prob_idx = env_info['trans_prob_idx']\n",
-    "    nextstate_idx = env_info['nextstate_idx']\n",
-    "    reward_idx = env_info['reward_idx']\n",
-    "    num_states = env_info['num_states']\n",
-    "    num_actions = env_info['num_actions']\n",
-    "    mdp = env_info['mdp']\n",
-    "\n",
-    "    V  = np.zeros((num_iters + 1, num_states))\n",
-    "    Q  = np.zeros((num_iters + 1, num_states, num_actions))\n",
-    "    pi = np.zeros((num_iters + 1, num_states))\n",
-    "\n",
-    "    for k in range(1, num_iters + 1):\n",
-    "        for s in range(num_states):\n",
-    "            for a in range(num_actions):\n",
-    "                # Calculate \\sum_{s'} p(s'\\mid s,a) [r + \\gamma v_k(s')]\n",
-    "                for pxrds in mdp[(s,a)]:\n",
-    "                    # mdp(s,a): [(p1,next1,r1,d1),(p2,next2,r2,d2),..]\n",
-    "                    pr = pxrds[prob_idx]  # p(s'\\mid s,a)\n",
-    "                    nextstate = pxrds[nextstate_idx]  # Next state\n",
-    "                    reward = pxrds[reward_idx]  # Reward\n",
-    "                    Q[k,s,a] += pr * (reward + gamma * V[k - 1, nextstate])\n",
-    "            # Record max value and max action\n",
-    "            V[k,s] = np.max(Q[k,s,:])\n",
-    "            pi[k,s] = np.argmax(Q[k,s,:])\n",
-    "    show_value_function_progress(env_desc, V[:-1], pi[:-1])\n",
-    "\n",
-    "    return V, Q, pi"
    ]
   },
   {
