--- a/Huggingface/course/course_nlp/unit05_datasets/02_custom_dataset.ipynb
+++ b/Huggingface/course/course_nlp/unit05_datasets/02_custom_dataset.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What if my dataset isn’t on the Hub?\n",
+    "\n",
+    "https://huggingface.co/learn/nlp-course/chapter5/2?fw=pt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
