--- a/Huggingface/course/course_nlp/unit05_datasets/03_slice_dice.ipynb
+++ b/Huggingface/course/course_nlp/unit05_datasets/03_slice_dice.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time to slice and dice\n",
+    "\n",
+    "https://huggingface.co/learn/nlp-course/chapter5/3?fw=pt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
