--- a/Huggingface/course/course_nlp/unit05_datasets/04_handle_big_data.ipynb
+++ b/Huggingface/course/course_nlp/unit05_datasets/04_handle_big_data.ipynb
@@ -1,20 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Big data? 🤗 Datasets to the rescue!\n",
+    "\n",
+    "https://huggingface.co/learn/nlp-course/chapter5/4?fw=pt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: zstandard in /home/mgj/miniconda3/envs/intro/lib/python3.10/site-packages (0.23.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install zstandard"
+    "!pip install -qq zstandard"
    ]
   },
   {
@@ -84,17 +85,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: psutil in /home/mgj/miniconda3/envs/intro/lib/python3.10/site-packages (7.0.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install psutil"
+    "!pip install -qq psutil"
    ]
   },
   {
