--- a/Huggingface/course/course_nlp/unit04_sharing_models/02_using_pretrained_models.ipynb
+++ b/Huggingface/course/course_nlp/unit04_sharing_models/02_using_pretrained_models.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using pretrained models\n",
+    "\n",
+    "https://huggingface.co/learn/nlp-course/chapter4/2?fw=pt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
